classification algorithm implemented